--- a/single-category.html
+++ b/single-category.html
@@ -87,10 +87,12 @@
   <div id="xs-deliver" class="text-center visible-xs">
     * We Deliver
   </div>
+  <div id="serverData" class="text-center"></div>
 
   <div id="main-content" class="container">
     <h2 id="menu-categories-title" class="text-center">Lunch Menu</h2>
     <div class="text-center">Lunch is not served until after 1 pm.</div>
+    
 
     <section class="row">
       <div class="menu-item-tile col-md-6">
@@ -211,6 +213,8 @@
     </section>
   </div>
 
+  
+
   <footer class="panel-footer">
     <div class="container">
       <div class="row">
@@ -240,6 +244,7 @@
 
   <script src="js/jquery-3.1.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/ajax-utils.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
