--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -3,10 +3,10 @@
     </div>
     <div id="home-tiles" class="row">
       <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="menu-category.html"><div id="menu-tile"><span>menu</span></div></a>
+        <a href="#" onclick="$dc.loadMenuCategories();"><div id="menu-tile"><span>menu</span></div></a>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+        <a href="#" onclick="$dc.loadMenuItems('SP')"><div id="specials-tile"><span>specials</span></div></a>
       </div>
         <a href="http://map.qq.com/?l=518594672" target="_blank">
           <div id="map-tile">
